src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObject_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObject_StringErrorContext.class */
public final class ARBVertexArrayObject_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindVertexArray(I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("nglDeleteVertexArrays(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glDeleteVertexArrays(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glDeleteVertexArrays(I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("nglGenVertexArrays(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glGenVertexArrays(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glGenVertexArrays()I", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glIsVertexArray(I)Z", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glDeleteVertexArrays([I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        methods.put("glGenVertexArrays([I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexArrayObjectErrorContext");
        return methods;
    }
}
